--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -1,8 +1,8 @@
-# Mantle RPC URL
-MANTLE_RPC_URL=https://rpc.sepolia.mantle.xyz
+# HashKey Chain RPC URL
+HASHKEY_RPC_URL=https://hashkeychain-testnet.alt.technology
 
 # Your wallet private key (DO NOT SHARE!)
 PRIVATE_KEY=your_private_key_here
 
-# Mantle API Key for contract verification (optional)
-MANTLE_API_KEY=your_api_key_here
+# HashKey API Key for contract verification (optional)
+HASHKEY_API_KEY=your_api_key_here
