--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "compile": "hardhat compile",
     "deploy:local": "hardhat run deploy.js --network localhost",
-    "deploy:sepolia": "hardhat run deploy.js --network mantleSepolia",
-    "deploy:mainnet": "hardhat run deploy.js --network mantleMainnet",
+    "deploy:testnet": "hardhat run deploy.js --network hashkeyTestnet",
+    "deploy:mainnet": "hardhat run deploy.js --network hashkeyMainnet",
     "test": "hardhat test",
     "node": "hardhat node"
   },
